[gd_scene load_steps=10 format=3 uid="uid://co6vx7heink86"]

[ext_resource type="Script" path="res://Code/Scenes/FullPiece.gd" id="1_oh5gf"]
[ext_resource type="PackedScene" uid="uid://c1nqp81cess0x" path="res://Scenes/Board&Beads/SingleBead.tscn" id="2_p6uu0"]
[ext_resource type="Shader" path="res://Shaders/ShaderCode/BurnOut.gdshader" id="3_g3lnw"]

[sub_resource type="Gradient" id="Gradient_s422o"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ttodo"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_u52aq"]
color_ramp = SubResource("Gradient_s422o")
noise = SubResource("FastNoiseLite_ttodo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fghpn"]
resource_local_to_scene = true
shader = ExtResource("3_g3lnw")
shader_parameter/dissolve_value = 1.0
shader_parameter/burn_size = 0.45
shader_parameter/burn_color = Color(1, 1, 1, 1)
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_u52aq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vc3xu"]
resource_local_to_scene = true
shader = ExtResource("3_g3lnw")
shader_parameter/dissolve_value = 1.0
shader_parameter/burn_size = 0.45
shader_parameter/burn_color = Color(1, 1, 1, 1)
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_u52aq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8rw82"]
resource_local_to_scene = true
shader = ExtResource("3_g3lnw")
shader_parameter/dissolve_value = 1.0
shader_parameter/burn_size = 0.45
shader_parameter/burn_color = Color(1, 1, 1, 1)
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_u52aq")

[node name="FullBead" type="Node2D"]
position = Vector2(426, 222)
script = ExtResource("1_oh5gf")
metadata/_edit_lock_ = true

[node name="Beads" type="Node2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Anchor" parent="Beads" instance=ExtResource("2_p6uu0")]
material = SubResource("ShaderMaterial_fghpn")

[node name="CCW" parent="Beads" instance=ExtResource("2_p6uu0")]
material = SubResource("ShaderMaterial_vc3xu")
position = Vector2(0, -50)

[node name="Clockwise" parent="Beads" instance=ExtResource("2_p6uu0")]
material = SubResource("ShaderMaterial_8rw82")
position = Vector2(50, 0)

[node name="RegPos" type="Node2D" parent="."]

[node name="AnchorPos" type="Marker2D" parent="RegPos"]

[node name="CCWPos" type="Marker2D" parent="RegPos"]
position = Vector2(0, -50)

[node name="ClockwisePos" type="Marker2D" parent="RegPos"]
position = Vector2(50, 0)

[node name="Positions" type="Node2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="AnchorPos" type="Marker2D" parent="Positions"]

[node name="CCWPos" type="Marker2D" parent="Positions"]
position = Vector2(0, -50)

[node name="ClockwisePos" type="Marker2D" parent="Positions"]
position = Vector2(50, 0)

[node name="FlipPos" type="Node2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="AnchorPos" type="Marker2D" parent="FlipPos"]

[node name="CCWPos" type="Marker2D" parent="FlipPos"]
position = Vector2(-50, 0)

[node name="ClockwisePos" type="Marker2D" parent="FlipPos"]
position = Vector2(0, -50)
